<?xml version="1.0"?>
<package format="2">
  <name>ijs_controllers</name>
  <version>0.0.3</version>
  <description>ijs_controllers provides code for controlling Franka Emika research robots with ros_control (based on Franka Emika examples)</description>
  <maintainer email="mihael.simonic@ijs.si">Mihael Simonič</maintainer>
  <license>Apache 2.0</license>

  <author>Mihael Simonič, Bojan Nemec, Leon Žlajpah</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>franka_hw</depend>
  <depend>robot_module_msgs</depend>
  <depend>std_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/ijs_controllers_plugin.xml"/>
  </export>
</package>
